kubernetes/flux/apps/home/media/qbittorrent/patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: media
spec:
  template:
    spec:
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - name: vpn-credentials
            mountPath: '/mnt/secrets-store'
            readOnly: true
      - name: qbittorrent 
        volumeMounts:
          - name: config
            mountPath: /config
          - name: downloads
            mountPath: /downloads
      volumes:
      - name: downloads
        nfs:
          server: blizzardnas.blizzard.internal
          path: /volume1/array/downloads
      - name: vpn-credentials
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: qbittorrent
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 1Gi
