kubernetes/flux/apps/home/media/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
spec:
  rules:
    - host: qbittorrent.apps.blizzard.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qbittorrent
              port:
                number: 8080
  tls:
    - hosts:
        - qbittorrent.apps.blizzard.internal
      secretName: qbittorrent-certificate-tls
